# ashprice-src

./: .gitignore  post-list.html  site.cabal  site.hs  stack.yaml
assets/css/: main.css  prism.css  test.css
assets/js/: blog.js  prism.js
bibs/: classics-hellenistics.markdown  functional-programming.markdown  general-linguistics.markdown  germanic-studies.markdown  grammaticalisation.markdown  history-ir-and-politics.markdown  ir-and-politics.markdown  italic-and-romance-studies.markdown  nordistics.markdown  scandinavian-studies-linguistics.markdown
bibs/ir/: SEA.markdown  europe.markdown
css/: main.css  temp  test.css
misc/: ethics-statement.markdown  fiction-that-I-like.markdown  films-and-tv-I-like.markdown  interesting-sites.markdown  personal-catalogue.markdown  tea-inventory.markdown  welsh-morphology-reference.markdown
posts/: 2020-08-12-the-making-of-this-site.markdown
scratchpad/: haskell-cfp.markdown
site.hs_store/: index.html  index.md  main.css
site.hs_store/blog/: index.html
site.hs_store/contact/: index.html  index.md
site.hslates/: default.html  post.html  postitem.html  posts.html
templates/: default.html  index.html  not-index.html  post.html  postitem.html  posts.html
