name:               site
version:            0.1.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.13.*
                  , pandoc
                  , text
                  , time
                  , old-locale
                  , containers
                  , filepath
                  , data-default
  ghc-options:      -threaded
  default-language: Haskell2010
